--- a/MinhaAPICore/appsettings.json
+++ b/MinhaAPICore/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection":  "Server=(localdb)\\mssqllocaldb;Database=MinhaApiCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
